[RPP] Update annotations sidebar tutorial
Update the tutorial images with the ones that do not have the 'user' icon and add instructions for deleting an annotation.

image: https://screenshot.googleplex.com/3Fzxnjmt69TtEtD

Bug: 370967152
Change-Id: I9538bc3b6447243c3df162bedfe9396088b32c12
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5915683
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -198,6 +198,7 @@ devtools_svg_sources = [
   "pause-circle.svg",
   "pause.svg",
   "pen-spark.svg",
+  "performance-panel-delete-annotation.svg",
   "performance-panel-diagram.svg",
   "performance-panel-entry-label.svg",
   "performance-panel-time-range.svg",
