--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -198,6 +198,7 @@ grd_files_release_sources = [
   "front_end/Images/pause-circle.svg",
   "front_end/Images/pause.svg",
   "front_end/Images/pen-spark.svg",
+  "front_end/Images/performance-panel-delete-annotation.svg",
   "front_end/Images/performance-panel-diagram.svg",
   "front_end/Images/performance-panel-entry-label.svg",
   "front_end/Images/performance-panel-time-range.svg",
