--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1848,6 +1848,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/timelinePanel.css.js",
   "front_end/panels/timeline/timelineStatusDialog.css.js",
   "front_end/panels/timeline/utils/IgnoreList.js",
+  "front_end/panels/timeline/utils/ImageCache.js",
   "front_end/panels/timeline/utils/NetworkRequest.js",
   "front_end/panels/timeline/utils/SourceMapsResolver.js",
   "front_end/panels/web_audio/AudioContextContentBuilder.js",
