[Freestyler] Implement execution mode
Fixed: 372123529
Change-Id: Icf595c8b0dcb3612b66c5c34d95df3073425684a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5916685
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -35,6 +35,7 @@ devtools_module("freestyler") {
     "../../core/common:bundle",
     "../../core/host:bundle",
     "../../core/i18n:bundle",
+    "../../core/root:bundle",
     "../../models/logs:bundle",
     "../../models/workspace:bundle",
     "../../panels/network/forward:bundle",
