RPP: Move hardwareConcurrency emulation to Sensors
And change Performance settings pane layout from 3 to 2 columns

Bug:371463665
Change-Id: I8f1b6e791c9c86a03485564197040962b4ce0b1b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5908530
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/sensors/BUILD.gn
+++ b/front_end/panels/sensors/BUILD.gn
@@ -25,6 +25,7 @@ devtools_module("sensors") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../core/sdk:bundle",
+    "../../panels/mobile_throttling:bundle",
     "../../ui/legacy:bundle",
   ]
 }
