--- a/front_end/panels/mobile_throttling/BUILD.gn
+++ b/front_end/panels/mobile_throttling/BUILD.gn
@@ -48,6 +48,7 @@ devtools_entrypoint("bundle") {
     "../elements/*",
     "../emulation/*",
     "../network/*",
+    "../sensors/*",
     "../timeline/*",
   ]
 
