--- a/front_end/panels/linear_memory_inspector/BUILD.gn
+++ b/front_end/panels/linear_memory_inspector/BUILD.gn
@@ -33,6 +33,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "../../entrypoints/*",
+    "../network/*",
   ]
 
   visibility += devtools_panels_visibility
