--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -49,6 +49,7 @@ devtools_module("network") {
     "NetworkSearchScope.ts",
     "NetworkTimeCalculator.ts",
     "NetworkWaterfallColumn.ts",
+    "RequestBinaryResponseView.ts",
     "RequestCookiesView.ts",
     "RequestHTMLView.ts",
     "RequestInitiatorView.ts",
@@ -75,6 +76,7 @@ devtools_module("network") {
     "../../models/trace:bundle",
     "../../models/workspace:bundle",
     "../../panels/elements:bundle",
+    "../../panels/linear_memory_inspector:bundle",
     "../../panels/mobile_throttling:bundle",
     "../../panels/search:bundle",
     "../../panels/sources:bundle",
@@ -147,6 +149,7 @@ ts_library("unittests") {
     "NetworkOverview.test.ts",
     "NetworkPanel.test.ts",
     "NetworkSearchScope.test.ts",
+    "RequestBinaryResponseView.test.ts",
     "RequestCookiesView.test.ts",
     "RequestHTMLView.test.ts",
     "RequestPayloadView.test.ts",
@@ -163,6 +166,7 @@ ts_library("unittests") {
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "../../models/text_utils:bundle",
+    "../../panels/linear_memory_inspector/components:bundle",
     "../../testing",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/source_frame:bundle",
