[GM3Restyling] Add card component
Introduces the card component.

Also-by: kprokopenko
Fixed: 343003619
Change-Id: I5be5f9c1d8a2724ba6f7efa15dba0c5f45d54c46
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912714
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -208,6 +208,7 @@ group("unittests") {
     "third_party/i18n:unittests",
     "ui/components/adorners:unittests",
     "ui/components/buttons:unittests",
+    "ui/components/cards:unittests",
     "ui/components/chrome_link:unittests",
     "ui/components/code_highlighter:unittests",
     "ui/components/data_grid:unittests",
