[RPP] Shorten URLs that appear in RenderBlocking, FontDisplay insights
`eventRef` now shortens URLs to use as its text. Also, FontDisplay now
uses `eventRef`.

Bug: 368170718, 372267639
Change-Id: Iafb9fa70ef153f604a0d5550c7ade23d5dbbfd0b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5907914
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -18,6 +18,7 @@ devtools_module("insights") {
   sources = [
     "CLSCulprits.ts",
     "DocumentLatency.ts",
+    "EventRef.ts",
     "FontDisplay.ts",
     "Helpers.ts",
     "InteractionToNextPaint.ts",
@@ -45,6 +46,7 @@ devtools_module("insights") {
     "../../../../ui/components/markdown_view:bundle",
     "../../../../ui/lit-html:bundle",
     "../../overlays:bundle",
+    "../../utils:bundle",
   ]
 }
 
