--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -7,6 +7,7 @@ import("../../../../scripts/build/ninja/devtools_module.gni")
 
 devtools_module("utils") {
   sources = [
+    "Helpers.ts",
     "IgnoreList.ts",
     "ImageCache.ts",
     "NetworkRequest.ts",
@@ -35,6 +36,7 @@ devtools_entrypoint("bundle") {
     "..:*",
     "../../network/*",
     "../components:*",
+    "../components/insights:*",
   ]
 }
 
@@ -42,6 +44,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "Helpers.test.ts",
     "IgnoreList.test.ts",
     "ImageCache.test.ts",
     "SourceMapsResolver.test.ts",
