--- a/front_end/panels/application/BUILD.gn
+++ b/front_end/panels/application/BUILD.gn
@@ -41,6 +41,7 @@ devtools_module("application") {
     "CookieItemsView.ts",
     "DOMStorageItemsView.ts",
     "DOMStorageModel.ts",
+    "ExtensionStorageItemsView.ts",
     "ExtensionStorageModel.ts",
     "IndexedDBModel.ts",
     "IndexedDBViews.ts",
@@ -145,6 +146,7 @@ ts_library("unittests") {
     "ApplicationPanelSidebar.test.ts",
     "BackgroundServiceView.test.ts",
     "DOMStorageModel.test.ts",
+    "ExtensionStorageItemsView.test.ts",
     "ExtensionStorageModel.test.ts",
     "IndexedDBModel.test.ts",
     "IndexedDBViews.test.ts",
