DevTools: Add json5 dependency to front_end/third_party
Adds json5 as a dependency to the frontend code. This will be used in
the Application > Extension Storage implementation to allow for more
relaxed parsing of values being set by the user.

This CL follows the process in https://chromium.googlesource.com/devtools/devtools-frontend/+/HEAD/docs/dependencies.md#third_party-code-included-in-devtools-bundle. Security and ATL approval has been given for this inclusion.

Bug: 40963428
Change-Id: I93c6146453454e7051137806948c13a6defcd3c4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5920841
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Oliver Dunk <oliverdunk@chromium.org>

--- a/front_end/panels/application/BUILD.gn
+++ b/front_end/panels/application/BUILD.gn
@@ -87,6 +87,7 @@ devtools_module("application") {
     "../../panels/mobile_throttling:bundle",
     "../../panels/network:bundle",
     "../../panels/network/forward:bundle",
+    "../../third_party/json5:bundle",
     "../../ui/components/buttons:bundle",
     "../../ui/components/data_grid:bundle",
     "../../ui/components/expandable_list:bundle",
