--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -661,6 +661,7 @@ grd_files_release_sources = [
   "front_end/third_party/diff/diff.js",
   "front_end/third_party/i18n/i18n.js",
   "front_end/third_party/intl-messageformat/intl-messageformat.js",
+  "front_end/third_party/json5/json5.js",
   "front_end/third_party/lighthouse/lighthouse-dt-bundle.js",
   "front_end/third_party/lighthouse/report/report.js",
   "front_end/third_party/lit/lit.js",
@@ -1899,6 +1900,8 @@ grd_files_debug_sources = [
   "front_end/third_party/i18n/i18n-impl.js",
   "front_end/third_party/i18n/localized-string-set.js",
   "front_end/third_party/intl-messageformat/package/intl-messageformat.esm.js",
+  "front_end/third_party/json5/lib/index.js",
+  "front_end/third_party/json5/package/lib/index.js",
   "front_end/third_party/lighthouse/report-assets/report-generator.mjs",
   "front_end/third_party/lighthouse/report/bundle.js",
   "front_end/third_party/lit/lib/decorators.js",
