--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -20,6 +20,7 @@ generate_css("css_files") {
     "networkRequestDetails.css",
     "networkRequestTooltip.css",
     "networkThrottlingSelector.css",
+    "relatedInsightChips.css",
     "sidebarAnnotationsTab.css",
     "sidebarInsightsTab.css",
     "sidebarSingleInsightSet.css",
@@ -43,6 +44,7 @@ devtools_module("components") {
     "NetworkRequestDetails.ts",
     "NetworkRequestTooltip.ts",
     "NetworkThrottlingSelector.ts",
+    "RelatedInsightChips.ts",
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
     "SidebarInsightsTab.ts",
@@ -114,6 +116,7 @@ ts_library("unittests") {
     "MetricCard.test.ts",
     "NetworkRequestDetails.test.ts",
     "NetworkThrottlingSelector.test.ts",
+    "RelatedInsightChips.test.ts",
     "Sidebar.test.ts",
     "SidebarAnnotationsTab.test.ts",
     "SidebarInsightsTab.test.ts",
