[DrJones] [PerformanceEntrypoint] Add DrJones Performance Agent
Bug: 369975739
Change-Id: I05f06335668a736776dc1a99b7912e911ad94768
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5898193
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1385,6 +1385,7 @@ grd_files_debug_sources = [
   "front_end/panels/freestyler/ChangeManager.js",
   "front_end/panels/freestyler/DrJonesFileAgent.js",
   "front_end/panels/freestyler/DrJonesNetworkAgent.js",
+  "front_end/panels/freestyler/DrJonesPerformanceAgent.js",
   "front_end/panels/freestyler/ExtensionScope.js",
   "front_end/panels/freestyler/FreestylerAgent.js",
   "front_end/panels/freestyler/FreestylerEvaluateAction.js",
