--- a/front_end/models/trace/BUILD.gn
+++ b/front_end/models/trace/BUILD.gn
@@ -39,6 +39,7 @@ devtools_entrypoint("bundle") {
     "../../../test/interactions/*",
     "../../core/sdk:unittests",
     "../../legacy_test_runner/*",
+    "../../panels/freestyler/*",
     "../../panels/lighthouse/*",
     "../../panels/network/*",
     "../../panels/recorder/*",
