--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -22,6 +22,7 @@ devtools_module("freestyler") {
     "ChangeManager.ts",
     "DrJonesFileAgent.ts",
     "DrJonesNetworkAgent.ts",
+    "DrJonesPerformanceAgent.ts",
     "ExtensionScope.ts",
     "FreestylerAgent.ts",
     "FreestylerEvaluateAction.ts",
@@ -37,6 +38,7 @@ devtools_module("freestyler") {
     "../../core/i18n:bundle",
     "../../core/root:bundle",
     "../../models/logs:bundle",
+    "../../models/trace:bundle",
     "../../models/workspace:bundle",
     "../../panels/network/forward:bundle",
     "../../panels/utils:bundle",
@@ -78,6 +80,7 @@ ts_library("unittests") {
     "ChangeManager.test.ts",
     "DrJonesFileAgent.test.ts",
     "DrJonesNetworkAgent.test.ts",
+    "DrJonesPerformanceAgent.test.ts",
     "FreestylerAgent.test.ts",
     "FreestylerEvaluateAction.test.ts",
     "FreestylerPanel.test.ts",
@@ -92,6 +95,7 @@ ts_library("unittests") {
     "../../core/platform:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
+    "../../models/trace:bundle",
     "../../testing",
   ]
 }
