[DrJones] [PerformanceEntrypoint] Update to Freestyler panel for DrJones Performance Agent
Bug: 369975739
Change-Id: I78ba3881b518358803613657a2ad0ece5f030279
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5890772
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/docs/freestyler/BUILD.gn
+++ b/front_end/ui/components/docs/freestyler/BUILD.gn
@@ -14,6 +14,7 @@ ts_library("ts") {
 
   deps = [
     "../../../../core/host:bundle",
+    "../../../../models/trace:bundle",
     "../../../../panels/freestyler:bundle",
     "../../../../testing",
     "../../../../third_party/marked:bundle",
