Annotations: add VE logs to overlay elements
1. keydown + click on the text input for labels
2. keydown + click on the text input for time ranges
3. click on the button in the overlay to create a connection

Bug: 360096654
Change-Id: I8aa30be3d1b1039850f5b005d803f96c39bd5180
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5921079
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/BUILD.gn
+++ b/front_end/panels/timeline/overlays/components/BUILD.gn
@@ -30,6 +30,7 @@ devtools_module("components") {
     "../../../../ui/components/helpers:bundle",
     "../../../../ui/components/icon_button:bundle",
     "../../../../ui/lit-html:bundle",
+    "../../../../ui/visual_logging:bundle",
   ]
 }
 
