Add LitHTML template to the SecurityPanel
Bug: 365737493
Change-Id: Ic265e5547b9b30b2a6affccb34aa5f89b5430af9
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5910267
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -20,9 +20,9 @@ generate_css("css_files") {
 devtools_module("security") {
   sources = [
     "OriginTreeElement.ts",
-    "SecurityAndPrivacyPanelSidebar.ts",
     "SecurityModel.ts",
     "SecurityPanel.ts",
+    "SecurityPanelSidebar.ts",
     "SecurityPanelSidebarTreeElement.ts",
   ]
 
