--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -36,6 +36,7 @@ ts_library("testing") {
     "SourceMapEncoder.test.ts",
     "SourceMapEncoder.ts",
     "SourceMapHelpers.ts",
+    "StorageItemsViewHelpers.ts",
     "StubIssue.ts",
     "TraceHelpers.ts",
     "TraceLoader.ts",
