Insights: add interaction + screenshot test
Bug: 373355645
Change-Id: I7bdaf63cc6d33341ad2781b5ec9a8792466350aa
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5928967
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/test/interactions/panels/performance/timeline/BUILD.gn
+++ b/test/interactions/panels/performance/timeline/BUILD.gn
@@ -15,6 +15,7 @@ node_ts_library("timeline") {
     "network_track_test.ts",
     "overview_test.ts",
     "rasterizer_tracks_test.ts",
+    "revealing-insights_test.ts",
     "thread_tracks_test.ts",
     "timeline_history_manager_test.ts",
     "timeline_selection_test.ts",
