--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -37,12 +37,14 @@ devtools_module("insights") {
   deps = [
     "../../../../core/common:bundle",
     "../../../../core/platform:bundle",
+    "../../../../core/sdk:bundle",
     "../../../../models/trace:bundle",
     "../../../../services/trace_bounds:bundle",
     "../../../../third_party/marked:bundle",
     "../../../../ui/components/buttons:bundle",
     "../../../../ui/components/helpers:bundle",
     "../../../../ui/components/icon_button:bundle",
+    "../../../../ui/components/linkifier:bundle",
     "../../../../ui/components/markdown_view:bundle",
     "../../../../ui/lit-html:bundle",
     "../../overlays:bundle",
