--- a/extensions/cxx_debugging/e2e/tsconfig.json
+++ b/extensions/cxx_debugging/e2e/tsconfig.json
@@ -8,6 +8,7 @@
     "allowUnreachableCode": false,
     "useUnknownInCatchVariables": false,
     "baseUrl": ".",
+    "skipLibCheck": true,
     "paths": {
       "test/*": [
         "../../../test/*"
