Create component for icons for file sources. Add function in panels utils for creating such icons given UISourceCode and classNames.
- [DrJones] [FileEntrypoint] Use it in AI Assistance panel for selected task

Pending: Use it in sources panel

Bug: 371947238
Change-Id: Ie3952df3dc4e25854a012c12c4ecf29ca66c80c8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5920285
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -2161,8 +2161,10 @@ grd_files_debug_sources = [
   "front_end/ui/components/helpers/scheduled-render.js",
   "front_end/ui/components/highlighting/HighlightManager.js",
   "front_end/ui/components/highlighting/highlighting.css.js",
+  "front_end/ui/components/icon_button/FileSourceIcon.js",
   "front_end/ui/components/icon_button/Icon.js",
   "front_end/ui/components/icon_button/IconButton.js",
+  "front_end/ui/components/icon_button/fileSourceIcon.css.js",
   "front_end/ui/components/icon_button/icon.css.legacy.js",
   "front_end/ui/components/icon_button/iconButton.css.js",
   "front_end/ui/components/input/checkbox.css.js",
