--- a/front_end/models/workspace/BUILD.gn
+++ b/front_end/models/workspace/BUILD.gn
@@ -48,8 +48,10 @@ devtools_entrypoint("bundle") {
     "../../panels/snippets/*",
     "../../panels/sources/*",
     "../../panels/timeline/*",
+    "../../panels/utils/*",
     "../../testing/*",
     "../../ui/components/docs/performance_panel/*",
+    "../../ui/components/icon_button/*",
     "../../ui/legacy/components/perf_ui/*",
     "../../ui/legacy/components/source_frame/*",
     "../../ui/legacy/components/utils/*",
