--- a/front_end/panels/snippets/BUILD.gn
+++ b/front_end/panels/snippets/BUILD.gn
@@ -34,6 +34,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "../../entrypoints/*",
+    "../../panels/utils/*",
     "../changes/*",
     "../sources/*",
   ]
