Add hover button for drjones file entrypoint
Bug: 372154092
Change-Id: I6aadf578c6e327b13a2a97c6e25f4276a0cada8a
Fixed: 372154092
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5932948
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/sources/BUILD.gn
+++ b/front_end/panels/sources/BUILD.gn
@@ -81,6 +81,7 @@ devtools_module("sources") {
     "../../panels/snippets:bundle",
     "../../panels/utils:bundle",
     "../../third_party/diff:bundle",
+    "../../ui/components/floating_button:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/components/text_editor:bundle",
     "../../ui/legacy:bundle",
