Use getIconForSourceFile to use IconForFileSource component for icons in sources panel
Bug: 371947238
Change-Id: I5c91a507fb4919eb407d4cdb373b447bb64a84ae
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5923303
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/sources/BUILD.gn
+++ b/front_end/panels/sources/BUILD.gn
@@ -92,6 +92,7 @@ devtools_module("sources") {
     "../../ui/legacy/components/source_frame:bundle",
     "../../ui/legacy/components/utils:bundle",
     "../../ui/visual_logging:bundle",
+    "../utils:bundle",
     "./components:bundle",
   ]
 }
