[RPP Observations] Add phases for each interaction
- Interaction list items are expandable
- Creates separate interaction if events happen in different frames
- Interactions are restored from the buffer
- `eventNames` property added to each interaction for future use

Bug: 369097528, 365160880, 371052022
Change-Id: Iab39cb300143aad3a6f2cc5ef5ecab79d7fd879e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933344
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/test/e2e/resources/performance/BUILD.gn
+++ b/test/e2e/resources/performance/BUILD.gn
@@ -11,6 +11,7 @@ copy_to_gen("performance") {
     "fake-website.html",
     "frame-metrics/frame.html",
     "frame-metrics/index.html",
+    "interaction-tester.html",
     "selectorStats/page-with-style-perf-test.html",
     "selectorStats/page-with-style.css",
     "selectorStats/page-with-style.html",
