[DrJones] Add computed timings
This data matches the calculations in the timing tab of a network request.

Fixed: 370024636
Change-Id: Ifcf44e3a8c209cd96f975654eef521248c403207
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5934527
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -40,7 +40,7 @@ devtools_module("freestyler") {
     "../../models/logs:bundle",
     "../../models/trace:bundle",
     "../../models/workspace:bundle",
-    "../../panels/network/forward:bundle",
+    "../../panels/network:bundle",
     "../../panels/utils:bundle",
     "../../third_party/marked:bundle",
     "../../ui/components/markdown_view:bundle",
