--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -60,6 +60,7 @@ grd_files_release_sources = [
   "front_end/Images/bundle.svg",
   "front_end/Images/button-magic.svg",
   "front_end/Images/calendar-today.svg",
+  "front_end/Images/center-focus-weak.svg",
   "front_end/Images/check-circle.svg",
   "front_end/Images/check-double.svg",
   "front_end/Images/checker.svg",
