--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -67,6 +67,7 @@ devtools_svg_sources = [
   "bundle.svg",
   "button-magic.svg",
   "calendar-today.svg",
+  "center-focus-weak.svg",
   "check-circle.svg",
   "check-double.svg",
   "checker.svg",
