add hover for drjones network entrypoint
Bug: 372154246
Change-Id: I63a7be1f1419be7321e0d52fba1caf905c5b5038
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933508
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Auto-Submit: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -84,6 +84,7 @@ devtools_module("network") {
     "../../panels/utils:bundle",
     "../../third_party/chromium/client-variations:bundle",
     "../../ui/components/expandable_list:bundle",
+    "../../ui/components/floating_button:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/cookie_table:bundle",
