--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1658,6 +1658,7 @@ grd_files_debug_sources = [
   "front_end/panels/search/SearchView.js",
   "front_end/panels/search/searchResultsPane.css.js",
   "front_end/panels/search/searchView.css.js",
+  "front_end/panels/security/CookieReportTreeElement.js",
   "front_end/panels/security/OriginTreeElement.js",
   "front_end/panels/security/SecurityModel.js",
   "front_end/panels/security/SecurityPanel.js",
