--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -19,6 +19,7 @@ generate_css("css_files") {
 
 devtools_module("security") {
   sources = [
+    "CookieReportTreeElement.ts",
     "OriginTreeElement.ts",
     "SecurityModel.ts",
     "SecurityPanel.ts",
