[GM3Restyling] Update Framework ignore listing settings page
Drive-by: Update padding in cards component

Before: https://i.imgur.com/aP6glij.png
After: https://i.imgur.com/r6csaJ5.png
Bug: 368238837
Change-Id: I16833b9a1fbc331cc8514ee37dbbe63a8c205baf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5945585
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -675,6 +675,7 @@ grd_files_release_sources = [
   "front_end/third_party/web-vitals/web-vitals.js",
   "front_end/ui/components/adorners/adorners.js",
   "front_end/ui/components/buttons/buttons.js",
+  "front_end/ui/components/cards/cards.js",
   "front_end/ui/components/chrome_link/chrome_link.js",
   "front_end/ui/components/code_highlighter/code_highlighter.js",
   "front_end/ui/components/data_grid/data_grid.js",
@@ -2133,6 +2134,8 @@ grd_files_debug_sources = [
   "front_end/ui/components/adorners/adorner.css.js",
   "front_end/ui/components/buttons/Button.js",
   "front_end/ui/components/buttons/button.css.legacy.js",
+  "front_end/ui/components/cards/Card.js",
+  "front_end/ui/components/cards/card.css.js",
   "front_end/ui/components/chrome_link/ChromeLink.js",
   "front_end/ui/components/chrome_link/chromeLink.css.js",
   "front_end/ui/components/code_highlighter/CodeHighlighter.js",
