--- a/front_end/panels/settings/BUILD.gn
+++ b/front_end/panels/settings/BUILD.gn
@@ -30,6 +30,7 @@ devtools_module("settings") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../core/root:bundle",
+    "../../ui/components/cards:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/components/legacy_wrapper:bundle",
     "../../ui/components/switch:bundle",
