--- a/front_end/panels/settings/emulation/BUILD.gn
+++ b/front_end/panels/settings/emulation/BUILD.gn
@@ -16,6 +16,7 @@ devtools_module("emulation") {
 
   deps = [
     "../../../core/i18n:bundle",
+    "../../../ui/components/cards:bundle",
     "../../../ui/legacy:bundle",
     "../../emulation:bundle",
     "./components:bundle",
