Connection Layer for rehydrated devtools
This patch creates a connection layer for rehydrated devtools and supply the relevant CDP support to empower rehydrated devtools to function just like a live profiling session.


Bug: 337909145
Change-Id: I6a0448e8cc9dbf10623520dc18fff6fc3eb76591
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5763794
Commit-Queue: Jayson Chen <jaysonchen@microsoft.com>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Robert Paveza <Rob.Paveza@microsoft.com>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -848,6 +848,7 @@ grd_files_debug_sources = [
   "front_end/core/sdk/PerformanceMetricsModel.js",
   "front_end/core/sdk/PreloadingModel.js",
   "front_end/core/sdk/ProfileTreeModel.js",
+  "front_end/core/sdk/RehydratingConnection.js",
   "front_end/core/sdk/RehydratingObject.js",
   "front_end/core/sdk/RemoteObject.js",
   "front_end/core/sdk/Resource.js",
