--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -471,6 +471,7 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/genericResponseWasBlockedByORB.md",
   "front_end/models/issues_manager/descriptions/heavyAd.md",
   "front_end/models/issues_manager/descriptions/mixedContent.md",
+  "front_end/models/issues_manager/descriptions/placeholderDescriptionForInvisibleIssues.md",
   "front_end/models/issues_manager/descriptions/propertyRuleInvalidNameIssue.md",
   "front_end/models/issues_manager/descriptions/propertyRuleIssue.md",
   "front_end/models/issues_manager/descriptions/sharedArrayBuffer.md",
