[lint] Read `lit-analyzer` options from toplevel `tsconfig.json`.
This way the config is in a central place and can be reused for
ts-lit-plugin.

Bug: 375149136
Change-Id: Ic3805b059b5c9b0d103a152e1ff36b3c9c5245b6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5953717
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./config/typescript/tsconfig.base.json",
   "compilerOptions": {
+    "allowUmdGlobalAccess": true,
     "lib": [
       "esnext",
       "dom",
@@ -9,7 +10,16 @@
       "webworker.iterable"
     ],
     "outDir": "ignored-for-vscode",
-    "allowUmdGlobalAccess": true
+    "plugins": [
+      {
+        "name": "ts-lit-plugin",
+        "rules": {
+          "no-complex-attribute-binding": "off",
+          "no-missing-import": "error",
+          "no-unknown-tag-name": "error"
+        }
+      }
+    ]
   },
   "include": [
     "front_end/",
