--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -35,6 +35,7 @@ node_ts_library("tests") {
     "media",
     "memory",
     "network",
+    "panels",
     "performance",
     "puppeteer",
     "quick_open",
