Update recommended extension for Lit
Bug: none
Change-Id: Iff4c8a320d8f0344fc56a86f32ca796fb41e078b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5953721
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
-      "dbaeumer.vscode-eslint",
-      "bierner.lit-html",
-      "npclaudiu.vscode-gn"
+    "dbaeumer.vscode-eslint",
+    "runem.lit-plugin",
+    "npclaudiu.vscode-gn"
   ]
 }
