[RPP] Include unsized images to CLS culprits
https://screenshot.googleplex.com/54UR4P4ZKj8NZMm

Bug:373488475
Change-Id: I9b70d65518fea2ad2dc01ef173adef8e66ed7a0d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5933343
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -94,6 +94,7 @@ copy_to_gen("traces") {
     "timings-track.json.gz",
     "two-functions-recursion.json.gz",
     "two-workers.json.gz",
+    "unsized-images.json.gz",
     "user-timings-complex.json.gz",
     "user-timings-details.json.gz",
     "user-timings.json.gz",
