RPP: add support for scheduler.postTask initiators
This CL adds InitiatorHandler support for scheduler.postTask() trace events
added in https://crrev.com/c/4234899

SchedulePostTaskCallback > RunPostTaskCallback
SchedulePostTaskCallback > AbortPostTaskCallback

Note that it's possible to have both a run and abort event for the same task
if the task is aborted within the callback itself.

Screenshot: https://screenshot.googleplex.com/AScEwgurwTCbTZK

Bug: 40775984
Change-Id: I730296f84e9a11056ada244ed50d1f249ea99bd4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5952311
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -78,6 +78,7 @@ copy_to_gen("traces") {
     "reload-no-tti.json.gz",
     "render-blocking-body.json.gz",
     "render-blocking-in-iframe.json.gz",
+    "scheduler-post-task.json.gz",
     "selector-stats-frame-test.json.gz",
     "selector-stats.json.gz",
     "server-timings.json.gz",
