[RPP]: Move third parties summaries extraction to helper
This also gets third party summaries based on a tracebounds

Bug:372881026,374192107
Change-Id: I6c2c965aea67033ee190bd8f55a25bb2e084f42c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5939714
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/extras/BUILD.gn
+++ b/front_end/models/trace/extras/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("extras") {
     "FilmStrip.ts",
     "MainThreadActivity.ts",
     "Metadata.ts",
+    "ThirdParties.ts",
     "URLForEntry.ts",
   ]
 
@@ -44,6 +45,7 @@ ts_library("unittests") {
     "FilmStrip.test.ts",
     "MainThreadActivity.test.ts",
     "Metadata.test.ts",
+    "ThirdParties.test.ts",
     "URLForEntry.test.ts",
   ]
 
