--- a/front_end/models/trace/helpers/BUILD.gn
+++ b/front_end/models/trace/helpers/BUILD.gn
@@ -23,6 +23,7 @@ devtools_module("helpers") {
     "../../../core/platform:bundle",
     "../../../core/root:bundle",
     "../../../models/cpu_profile:bundle",
+    "../../../third_party/third-party-web:bundle",
     "../types:bundle",
   ]
 }
