--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -77,6 +77,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "AiAgent.test.ts",
     "ChangeManager.test.ts",
     "DrJonesFileAgent.test.ts",
     "DrJonesNetworkAgent.test.ts",
