[DrJones] Add details for source-mapped files and source maps to context sent to AiDA
Bug: 373594904
Change-Id: Icb4f3c951edc0b701152e8b9e927ff904e708241
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5953536
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/models/bindings/BUILD.gn
+++ b/front_end/models/bindings/BUILD.gn
@@ -57,6 +57,7 @@ devtools_entrypoint("bundle") {
     "../../panels/coverage/*",
     "../../panels/elements/*",
     "../../panels/emulation/*",
+    "../../panels/freestyler/*",
     "../../panels/network/*",
     "../../panels/profiler/*",
     "../../panels/recorder/*",
