[Animations] Move AnimationModel to sdk/
For adding the swatch, Elements panel will need to use
AnimationModel too. For this, to not have a dependency from
animations panel, we need to move AnimationModel to a common place.

Bug: 349566091
Change-Id: I78f59bbf7c7183da34e8b1d09e9409b81c62a281
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5961996
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -9,6 +9,7 @@ import("../../../scripts/build/typescript/typescript.gni")
 devtools_module("sdk") {
   sources = [
     "AccessibilityModel.ts",
+    "AnimationModel.ts",
     "AutofillModel.ts",
     "CPUProfileDataModel.ts",
     "CPUProfilerModel.ts",
@@ -133,6 +134,7 @@ ts_library("unittests") {
 
   sources = [
     "AccessibilityModel.test.ts",
+    "AnimationModel.test.ts",
     "AutofillModel.test.ts",
     "CPUThrottlingManager.test.ts",
     "CSSContainerQuery.test.ts",
