--- a/front_end/panels/animation/BUILD.gn
+++ b/front_end/panels/animation/BUILD.gn
@@ -17,9 +17,7 @@ generate_css("css_files") {
 
 devtools_module("animation") {
   sources = [
-    "AnimationDOMNode.ts",
     "AnimationGroupPreviewUI.ts",
-    "AnimationModel.ts",
     "AnimationScreenshotPopover.ts",
     "AnimationTimeline.ts",
     "AnimationUI.ts",
@@ -69,10 +67,7 @@ devtools_entrypoint("meta") {
 ts_library("unittests") {
   testonly = true
 
-  sources = [
-    "AnimationModel.test.ts",
-    "AnimationTimeline.test.ts",
-  ]
+  sources = [ "AnimationTimeline.test.ts" ]
 
   deps = [
     ":bundle",
