Add missing Attribution Reporting issue descriptions
Bug: 375209496
Change-Id: Ibb3faea6fb2e756d21df19e5136d09490461f7b5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5956822
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Andrew Paseltiner <apaseltiner@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -384,11 +384,18 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/SameSiteWarnCrossDowngradeSet.md",
   "front_end/models/issues_manager/descriptions/SameSiteWarnStrictLaxDowngradeStrict.md",
   "front_end/models/issues_manager/descriptions/arInsecureContext.md",
+  "front_end/models/issues_manager/descriptions/arInvalidInfoHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterOsSourceHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterOsTriggerHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterSourceHeader.md",
   "front_end/models/issues_manager/descriptions/arInvalidRegisterTriggerHeader.md",
+  "front_end/models/issues_manager/descriptions/arNavigationRegistrationUniqueScopeAlreadySet.md",
   "front_end/models/issues_manager/descriptions/arNavigationRegistrationWithoutTransientUserActivation.md",
+  "front_end/models/issues_manager/descriptions/arNoRegisterOsSourceHeader.md",
+  "front_end/models/issues_manager/descriptions/arNoRegisterOsTriggerHeader.md",
+  "front_end/models/issues_manager/descriptions/arNoRegisterSourceHeader.md",
+  "front_end/models/issues_manager/descriptions/arNoRegisterTriggerHeader.md",
+  "front_end/models/issues_manager/descriptions/arNoWebOrOsSupport.md",
   "front_end/models/issues_manager/descriptions/arOsSourceIgnored.md",
   "front_end/models/issues_manager/descriptions/arOsTriggerIgnored.md",
   "front_end/models/issues_manager/descriptions/arPermissionPolicyDisabled.md",
