--- a/front_end/models/issues_manager/BUILD.gn
+++ b/front_end/models/issues_manager/BUILD.gn
@@ -60,11 +60,18 @@ devtools_module("issues_manager") {
 
 devtools_issue_description_files = [
   "arInsecureContext.md",
+  "arInvalidInfoHeader.md",
   "arInvalidRegisterOsSourceHeader.md",
   "arInvalidRegisterOsTriggerHeader.md",
   "arInvalidRegisterSourceHeader.md",
   "arInvalidRegisterTriggerHeader.md",
   "arNavigationRegistrationWithoutTransientUserActivation.md",
+  "arNavigationRegistrationUniqueScopeAlreadySet.md",
+  "arNoRegisterOsSourceHeader.md",
+  "arNoRegisterOsTriggerHeader.md",
+  "arNoRegisterSourceHeader.md",
+  "arNoRegisterTriggerHeader.md",
+  "arNoWebOrOsSupport.md",
   "arOsSourceIgnored.md",
   "arOsTriggerIgnored.md",
   "arPermissionPolicyDisabled.md",
